test/yaml/testdata/output/rewrite/app-root.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx
  namespace: namespace1
spec:
  gatewayClassName: eg
  listeners:
  - hostname: example.com
    name: example-com-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rewrite-ingress-example-com
  namespace: namespace1
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: service-ingress1
      port: 443
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replaceFullPath: /app
          type: ReplaceFullPath
    matches:
    - path:
        type: PathPrefix
        value: /
    name: rule-0-prefix-root
status:
  parents: []
